<resources>
    <string name="app_name">Cloudhired</string>
    <string name="FirstName">First Name</string>
    <string name="favoriteDescription">Favorite</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search Button</string>
    <string name="more">More</string>
    <string name="jobs">Jobs</string>
    <string name="jobs_description">Jobs</string>
    <string name="pros">Pros</string>
    <string name="pros_description">Pros</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>